tooling/tree-sitter-satsuma/test/corpus/metadata.txt
================================================================================
Empty metadata block
================================================================================

schema customers () {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block)))

================================================================================
Single tag token
================================================================================

schema customers (pii) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier)))))

================================================================================
Multiple tag tokens
================================================================================

schema customers (pii, required, indexed) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_token
        (identifier))
      (tag_token
        (identifier)))))

================================================================================
Single key-value pair
================================================================================

schema customers (format parquet) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))))

================================================================================
Key-value pair with string value
================================================================================

schema customers (note "Primary customer store") {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (note_tag
        (nl_string)))))

================================================================================
Mixed tag tokens and key-value pairs
================================================================================

schema events (pii, domain crm, format parquet) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))))

================================================================================
Enum body
================================================================================

schema events (enum {active, suspended, closed}) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (enum_body
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Enum body with trailing comma
================================================================================

schema events (enum {active, suspended, closed,}) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (enum_body
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
Slice body in schema metadata
================================================================================

schema mrr (metric, source fact_subscriptions, grain monthly, slice {customer_segment, product_line}) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (slice_body
        (identifier)
        (identifier)))))

================================================================================
Note tag with NL string
================================================================================

schema customers (note "Primary customer store from 2005-2024.") {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (note_tag
        (nl_string)))))

================================================================================
Note tag with multiline string
================================================================================

schema customers (note """
# Customer Schema
Primary store.
""") {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (note_tag
        (multiline_string)))))

================================================================================
Multiline metadata block
================================================================================

schema customers (
  pii,
  format parquet,
  domain crm
) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))))

================================================================================
Trailing comma in metadata block
================================================================================

schema customers (pii, required,) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_token
        (identifier)))))

================================================================================
Metric schema metadata with metric_name, source, grain, and filter
================================================================================

schema monthly_recurring_revenue (
  metric,
  metric_name "MRR",
  source fact_subscriptions,
  grain monthly,
  filter "status = 'active'"
) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (nl_string)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (nl_string))))))

================================================================================
Mapping with metadata
================================================================================

mapping crm_to_warehouse (version 2, author jsmith) {
  source { crm_customers }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (number_literal)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Schema without metadata
================================================================================

schema orders {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))))

================================================================================
Key-value with backtick reference value
================================================================================

schema salesforce (ref `Account`.id) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (backtick_name)))
      (ERROR
        (continuation_word)))))

================================================================================
Ref-on compound metadata
================================================================================

schema fact_sales (
  fact,
  grain {transaction_id, line_number},
  ref dim_customer on customer_id,
  ref dim_product on sku,
  note "Transaction line-item fact"
) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (identifier)
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (identifier)
          (identifier)))
      (note_tag
        (nl_string)))))

================================================================================
Lone comma in empty metadata block is rejected
:error
================================================================================

schema s (,) { f STRING }

--------------------------------------------------------------------------------



================================================================================
Trailing comma allowed after metadata entries
================================================================================

schema s (pk, required,) { f STRING }

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_token
        (identifier)))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)))))
