tooling/tree-sitter-satsuma/test/corpus/namespaces.txt
================================================================================
namespace block with schema
================================================================================

namespace pos {
  schema stores {
    STORE_ID VARCHAR(20)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
namespace block with metadata
================================================================================

namespace pos (note "POS system") {
  schema stores {
    STORE_ID VARCHAR(20)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (metadata_block
      (note_tag
        (nl_string)))
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
namespace with multiple definitions
================================================================================

namespace vault {
  schema hub_customer {
    hub_key BINARY(20)
  }

  fragment audit_cols {
    load_ts TIMESTAMP
  }

  transform dv_hash {
    sha2
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))
    (fragment_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))
    (transform_block
      (block_label
        (identifier))
      (pipe_chain
        (pipe_step
          (pipe_text
            (identifier)))))))

================================================================================
namespace with mapping (deprecated whole-name quoting `ns::name` still parses)
================================================================================

namespace vault {
  mapping `load hub_customer` {
    source { `pos::stores` }
    target { `hub_customer` }
    STORE_ID -> hub_key { dv_hash }
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (mapping_block
      (block_label
        (backtick_name))
      (mapping_body
        (source_block
          (source_ref
            (backtick_name)))
        (target_block
          (source_ref
            (backtick_name)))
        (map_arrow
          (src_path
            (field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier)))
          (pipe_chain
            (pipe_step
              (pipe_text
                (identifier)))))))))

================================================================================
namespace with metric schema
================================================================================

namespace analytics {
  schema revenue (metric, source fact_sales) {
    amount DECIMAL(18,2)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (metadata_block
        (tag_token
          (identifier))
        (tag_with_value
          (identifier)
          (value_text
            (identifier))))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
metric schema with qualified source name
================================================================================

namespace analytics {
  schema revenue (metric, source ecom::orders) {
    amount DECIMAL(18,2)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (metadata_block
        (tag_token
          (identifier))
        (tag_with_value
          (identifier)
          (value_text
            (qualified_name
              (identifier)
              (identifier)))))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
metric schema with qualified sources in braced list
================================================================================

namespace analytics {
  schema revenue (metric, source {ecom::orders, pos::transactions}) {
    amount DECIMAL(18,2)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (metadata_block
        (tag_token
          (identifier))
        (tag_with_value
          (identifier)
          (value_text
            (qualified_name
              (identifier)
              (identifier))
            (qualified_name
              (identifier)
              (identifier)))))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
empty namespace
================================================================================

namespace staging {
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)))

================================================================================
multiple namespaces in one file
================================================================================

namespace pos {
  schema stores {
    STORE_ID VARCHAR(20)
  }
}

namespace ecom {
  schema orders {
    order_id BIGINT
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr)))))
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
global and namespaced definitions mixed
================================================================================

transform dv_hash {
  sha2
}

namespace vault {
  schema hub_customer {
    hub_key BINARY(20)
  }
}

schema dim_date {
  date_key INT
}

--------------------------------------------------------------------------------

(source_file
  (transform_block
    (block_label
      (identifier))
    (pipe_chain
      (pipe_step
        (pipe_text
          (identifier)))))
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr)))))
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)))))

================================================================================
qualified import names
================================================================================

import { pos::stores, vault::hub_customer } from "platform.stm"

--------------------------------------------------------------------------------

(source_file
  (import_decl
    (import_name
      (qualified_name
        (identifier)
        (identifier)))
    (import_name
      (qualified_name
        (identifier)
        (identifier)))
    (import_path
      (nl_string))))

================================================================================
mixed qualified and unqualified imports
================================================================================

import { pos::stores, dv_hash } from "common.stm"

--------------------------------------------------------------------------------

(source_file
  (import_decl
    (import_name
      (qualified_name
        (identifier)
        (identifier)))
    (import_name
      (identifier))
    (import_path
      (nl_string))))

================================================================================
qualified source and target refs
================================================================================

namespace vault {
  mapping `cross namespace` {
    source { pos::stores }
    target { hub_store }
    STORE_ID -> hub_key
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (mapping_block
      (block_label
        (backtick_name))
      (mapping_body
        (source_block
          (source_ref
            (qualified_name
              (identifier)
              (identifier))))
        (target_block
          (source_ref
            (identifier)))
        (map_arrow
          (src_path
            (field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))))))

================================================================================
qualified fragment spread
================================================================================

namespace vault {
  schema hub_customer {
    hub_key BINARY(20)
    ...shared::audit_fields
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))
        (fragment_spread
          (spread_label
            (qualified_name
              (identifier)
              (identifier))))))))

================================================================================
namespace with note block
================================================================================

namespace pos {
  note {
    "This namespace covers POS data"
  }

  schema stores {
    STORE_ID VARCHAR(20)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (note_block
      (nl_string))
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
fragment spread inside namespace schema (ns-platform pattern)
================================================================================

fragment audit_cols {
  load_ts TIMESTAMP
}

namespace raw {
  schema contacts {
    contact_id VARCHAR(36)
    ...audit_cols
  }
}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr))))
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))
        (fragment_spread
          (spread_label
            (identifier)))))))

================================================================================
cross-namespace mapping with computed arrow (ns-platform pattern)
================================================================================

namespace vault {
  mapping `load hub` {
    source { `raw::contacts` }
    target { `hub_contact` }

    contact_id -> hub_key { dv_hash }

    -> hash_diff {
      "MD5 hash for change detection"
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (mapping_block
      (block_label
        (backtick_name))
      (mapping_body
        (source_block
          (source_ref
            (backtick_name)))
        (target_block
          (source_ref
            (backtick_name)))
        (map_arrow
          (src_path
            (field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier)))
          (pipe_chain
            (pipe_step
              (pipe_text
                (identifier)))))
        (computed_arrow
          (tgt_path
            (field_path
              (identifier)))
          (pipe_chain
            (pipe_step
              (pipe_text
                (nl_string)))))))))

================================================================================
repeated namespace blocks (ns-merging pattern)
================================================================================

namespace source {
  schema employees {
    emp_id VARCHAR(20)
  }
}

namespace source {
  schema departments {
    dept_id VARCHAR(20)
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr)))))
  (namespace_block
    name: (identifier)
    (schema_block
      (block_label
        (identifier))
      (schema_body
        (field_decl
          (field_name
            (identifier))
          (type_expr))))))

================================================================================
cross-namespace staging mapping (ns-merging pattern, deprecated whole-name quoting)
================================================================================

namespace staging {
  mapping `stage employees` {
    source { `source::employees` }
    target { `stg_employees` }

    emp_id -> emp_id
    name -> name { trim | uppercase }
  }
}

--------------------------------------------------------------------------------

(source_file
  (namespace_block
    name: (identifier)
    (mapping_block
      (block_label
        (backtick_name))
      (mapping_body
        (source_block
          (source_ref
            (backtick_name)))
        (target_block
          (source_ref
            (backtick_name)))
        (map_arrow
          (src_path
            (field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))
        (map_arrow
          (src_path
            (field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier)))
          (pipe_chain
            (pipe_step
              (pipe_text
                (identifier)))
            (pipe_step
              (pipe_text
                (identifier)))))))))

================================================================================
backtick schema name after :: in import, source and @ref (bsw-iuzs)
================================================================================

import { raw::`crm-contacts` } from "raw.stm"

mapping {
  source { raw::`crm-contacts` }
  target { tgt }
  -> name { @raw::`crm-contacts`.`full name` | trim }
}

--------------------------------------------------------------------------------

(source_file
  (import_decl
    (import_name
      (qualified_name
        (identifier)
        (backtick_name)))
    (import_path
      (nl_string)))
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (qualified_name
            (identifier)
            (backtick_name))))
      (target_block
        (source_ref
          (identifier)))
      (computed_arrow
        (tgt_path
          (field_path
            (identifier)))
        (pipe_chain
          (pipe_step
            (pipe_text
              (at_ref
                (identifier)
                (backtick_name)
                (backtick_name))))
          (pipe_step
            (pipe_text
              (identifier))))))))

================================================================================
backtick name after :: in a spread and a ref metadata value (bsw-iuzs)
================================================================================

schema tgt {
  ...raw::`audit fields`
  id INT (ref raw::`crm-contacts`.`customer-id`)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (fragment_spread
        (spread_label
          (qualified_name
            (identifier)
            (backtick_name))))
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (qualified_dotted_name
                (qualified_name
                  (identifier)
                  (backtick_name))
                (backtick_name)))))))))

================================================================================
A backtick namespace name before :: is rejected (bsw-iuzs)
:error
================================================================================

mapping {
  source { `raw`::contacts }
  target { tgt }
}

--------------------------------------------------------------------------------
